# CSC3002_GroupProject

./: CMakeLists.txt  GameObj.cpp  GameObj.hpp  Player.hpp  README.md  Scene.cpp  Scene.hpp  level1.json  player.cpp
config/: audio_config.json  engine.ini  example.json  flat_example.json  level1.json  memu.json  menu.json
src/: main.cpp
src/engine/: Display.cpp  EventSys.cpp  GameInput.cpp  Timer.cpp  Window.cpp  Window.hpp
src/include/: AudioManager.hpp  ConfigLoader.hpp  Display.hpp  Engine.hpp  EventSys.hpp  GameInput.hpp  GameObj.hpp  Player.hpp  ResourceLoader.hpp  Scene.hpp  Timer.hpp
src/loader/: ConfigLoader.cpp  ConfigLoader.hpp  ResourceLoader.cpp  ResourceLoader.hpp
src/objects/: AudioManager.cpp  GameObj.cpp  Player.cpp  Scene.cpp  player.cpp
src/test/: CL_test.cpp  EventSys_test.cpp  KeyRead_test.cpp  RL_test.cpp  box2d_test.cpp
